--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,1 +1,3 @@
-<a href="https://www.twilio.com/authorize/CN332bd3aa4233cc36603076c995401727" id="twilio-connect-button"></a>
+<%= link_to "",
+           "https://www.twilio.com/authorize/CN332bd3aa4233cc36603076c995401727",
+           id: "twilio-connect-button" unless twilio_connection? %>
