--- a/app/views/tos/show.html.erb
+++ b/app/views/tos/show.html.erb
@@ -1,3 +1,5 @@
 These are the terms of service:
 
 23asd398<%= session[:sid] %>pc98fj
+
+MPS2sdf<%= Rails.application.secrets.twilio_auth_token %>787sd3sd
