--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -5,7 +5,7 @@
     <th>Sent at</th>
     <th></th>
   </tr>
-  <%= responses.each do |r| %>
+  <%= @responses.each do |r| %>
     <tr>
       <td><%= r.from %></td>
       <td><%= r.body %></td> 
