fix a bug, add some style to able

--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -1,11 +1,11 @@
-<table>
+<table id="responses-table">
   <tr>
     <th>From</th>
     <th>Message</th> 
     <th>Sent at</th>
     <th></th>
   </tr>
-  <%= @responses.each do |r| %>
+  <% @responses.each do |r| %>
     <tr>
       <td><%= r[:from] %></td>
       <td><%= r[:body] %></td>
