--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -1,14 +1,14 @@
 <table id="responses-table">
   <tr>
     <th>From</th>
-    <th>Message</th> 
+    <th class="body-column">Message</th>
     <th>Sent at</th>
     <th></th>
   </tr>
   <% @responses.each do |r| %>
     <tr>
       <td><%= r[:from] %></td>
-      <td><%= r[:body] %></td>
+      <td class="body-column"><%= r[:body] %></td>
       <td><%= r[:sent] %></td>
       <td><%= link_to "Reply", new_blast_path %></td>
     </tr>
