--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<% if twilio_connect? %>
+<% if twilio_connection? %>
   <div id="navbar">
     <%= link_to "Create new message blast", new_blast_path %>
     <%= link_to "View responses", responses_path %>
