--- a/app/views/phone_numbers/new.html.erb
+++ b/app/views/phone_numbers/new.html.erb
@@ -5,4 +5,4 @@
 
 <% render "select_country" if @countries %>
 <% render "select_area_code" if @select_area_code %>
-<% render "select_number" if @available_numbers.present %>
+<% render "select_number" if @available_numbers.present? %>
